## News for package rnirs

##----------------- Version 1.6-1

- Removing the dependence of package rnirs to packages ggplot2, gridExtra and scales.
Functions plotxy and plotmse use now basic R functions for graphics. 

##----------------- Version 1.6-0

- New functions:

  pca.cr (Robust PCA Croux & Ruiz-Gazen algorithm))

  pca.rob (Robust PCA algorithm)

  Auxiliary functions: 
    .simpp.hub (PP simulation)
    .stahel (Stahel-Donoho outlyingness)

##----------------- Version 1.5-3

- For better consistency between the functions using row weighting (argument "weights"),
the weights are now automaticaly "normalized" to sum to 1 before the next computations. 

- New functions:

  pca.sph (Robust spherical PCA algorithm)

  Auxiliary functions: 
    .xmedspa (script from rrcov v.1.4-3 on R CRAN, V. Todorov, 2016)
    .ellips (computation of ellipsoids)

- Argument "c" in wdist has been renamed "cri".

- Auxiliary functions .xmeans, .xnorms, .xvars have been renamed
.xmean, .xnorm, .xvar, and their default arguments have changed.

- Various code cleaning.


##----------------- Version 1.5-2

- Better management of weights = 0 in pca.svd.


##----------------- Version 1.5-1

- For facilitating package maintenance and evolution, 

(a) Functions pca.svd, pca.eigen, pca.nipals, pls.kernel and pls.nipals have been removed.

(b) Functions pca.svdw, pca.eigenw, pca.nipalsw, pls.kernelw and pls.nipalsw 
have been renamed to pca.svd, pca.eigen, pca.nipals, pls.kernel and pls.nipals 

(c) Functions knnwr and knnwda have been renamed knnr and knnda 


###----------------- Version 1.5-0

- Function wkern has been renamed to wdist, and slightly modified (in particular for the management of the outliers). This may vary slightly the numerical results of
functions using wdist.

- Function pca.nipals has been renamed to pca.nipalsna.

- New functions have been added: 

    influ.pls

    pca.nipals

    pca.nipalsw

    Auxiliary functions available in file zfunctions.R