@@ -1,7 +1,12 @@
 plotmse <- function(obj, nam = "rmsep", group = NULL,  col = NULL,
-  legend = TRUE, legend.title = NULL, ncol = 1, lwd = 1.8, ...) {
+  legend = TRUE, legend.title = NULL, ncol = 1, ...) {
   
+  dots <- list(...)
+
   obj <- obj[, c("ncomp", nam)]
+  
+  if(is.null(dots$lwd))
+    dots$lwd <- 1.8
   
   fg <- "grey70"
     
@@ -11,8 +16,8 @@ plotmse <- function(obj, nam = "rmsep", group = NULL,  col = NULL,
     xaxt = "n", las = 1, fg = fg,
     ...
     )
-  labs <- u <- 0:max(z$ncomp)
-  labs[1 + seq(1, max(z$ncomp), by = 2)] <- NA
+  labs <- u <- 0:max(obj$ncomp)
+  labs[1 + seq(1, max(obj$ncomp), by = 2)] <- NA
   axis(side = 1, at = u, labels = labs, fg = fg) 
       
   if(is.null(group)) {
@@ -20,8 +25,9 @@ plotmse <- function(obj, nam = "rmsep", group = NULL,  col = NULL,
     if(is.null(col))
       col <- "#045a8d"
 
-    lines(obj[, 1:2], col = col, lwd = lwd)
-    
+    do.call(lines,
+      c(list(x = obj[, 1], y = obj[, 2], col = col), dots))
+  
     }
   
   else {
@@ -37,13 +43,14 @@ plotmse <- function(obj, nam = "rmsep", group = NULL,  col = NULL,
         col <- rep(col, nlev)
       }
     else
-      #col <- 1:nlev #rep("grey70", nlev)
       col <- palette.colors(n = nlev, palette = "ggplot2", recycle = TRUE)
-      #col <- heat.colors(n = nlev, alpha = 1, rev = FALSE)
-      #col <- terrain.colors(n = nlev, alpha = 1, rev = FALSE)
    
     for(i in 1:nlev) {
-      lines(obj[group == levs[i], 1:2], col = col[i], lwd = lwd)
+
+      do.call(lines,
+        c(list(x = obj[group == levs[i], 1], y = obj[group == levs[i], 2], 
+          col = col[i]), dots))
+      
       }
     
     if(legend) {
@@ -53,8 +60,6 @@ plotmse <- function(obj, nam = "rmsep", group = NULL,  col = NULL,
       
       legend("topright", legend = levs,
         box.col = fg, ncol = ncol,
-        #text.width = 2 * max(strwidth(group)),      
-        #text.width = strwidth("1,000,00000000"),
         col = col, lty = 1, xjust = 1, yjust = 1,
         title = legend.title)
       }
